tests/NormalTests/paczka1/small_fuzzy/57468387.err
Error in line 1: 1rbUl S508 39,9
Error in line 9: 1rbUl A490 190,6
Error in line 14: 1rbUl S508 68,81
